--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -5,6 +5,10 @@
         android:icon="@drawable/home"
         android:title="Home" />
     <item
+        android:id="@+id/trendsId"
+        android:icon="@drawable/flame"
+        android:title="Trends" />
+    <item
         android:id="@+id/inventoryId"
         android:icon="@drawable/inventoryseller"
         android:title="Inventory" />
