--- a/app/src/main/res/menu/navigationbuyer.xml
+++ b/app/src/main/res/menu/navigationbuyer.xml
@@ -6,7 +6,7 @@
         android:title="Home" />
     <item
         android:id="@+id/trendsId"
-        android:icon="@drawable/trend"
+        android:icon="@drawable/flame"
         android:title="Trends" />
     <item
         android:id="@+id/notificationId"
