--- a/app/src/main/res/layout/activity_product_details_buyer.xml
+++ b/app/src/main/res/layout/activity_product_details_buyer.xml
@@ -183,14 +183,15 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"/>
 
-            <Button
+            <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/btn_add_review"
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Add Review"
                 android:layout_marginTop="16dp"
-                android:backgroundTint="#2196F3"
-                android:textColor="@android:color/white"
+                android:textColor="@android:color/black"
+                android:padding="16dp"
+                android:background="@drawable/border"
                 android:textSize="16sp"
                 app:layout_constraintTop_toBottomOf="@id/et_product_quantity"
                 app:layout_constraintStart_toStartOf="parent"
