--- a/app/src/main/res/layout/fragment_me_buyer.xml
+++ b/app/src/main/res/layout/fragment_me_buyer.xml
@@ -15,109 +15,105 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="match_parent"
+            <!-- Profile Image and Upload Button Section -->
+            <androidx.cardview.widget.CardView
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="30dp">
+                android:layout_marginTop="30dp"
+                android:elevation="4dp"
+                app:cardCornerRadius="50dp"
+                android:layout_gravity="center"
+              >
 
                 <ImageView
                     android:id="@+id/profileImageView"
-                    android:layout_width="90dp"
-                    android:layout_height="90dp"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:layout_centerHorizontal="true"
                     app:srcCompat="@drawable/me"
-                    tools:ignore="MissingConstraints" />
-
-                <Button
-                    android:id="@+id/uploadButton"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Upload"
                     android:layout_gravity="center"
-                    app:layout_constraintEnd_toEndOf="@+id/profileImageView"
-                    app:layout_constraintStart_toStartOf="@+id/profileImageView"
-                    app:layout_constraintTop_toBottomOf="@+id/profileImageView"/>
+                    tools:ignore="MissingConstraints"/>
+            </androidx.cardview.widget.CardView>
 
-                <TextView
-                    android:id="@+id/textView"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="User"
-                    android:layout_marginTop="10dp"
-                    android:textSize="22sp"
-                    android:textStyle="bold"
-                    app:layout_constraintEnd_toEndOf="@+id/uploadButton"
-                    app:layout_constraintStart_toStartOf="@+id/uploadButton"
-                    app:layout_constraintTop_toBottomOf="@+id/uploadButton"/>
+            <Button
+                android:id="@+id/uploadButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Upload"
+                android:layout_gravity="center"
+                android:layout_marginTop="16dp"/>
 
-                <TextView
-                    android:id="@+id/textView2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Email"
-                    android:layout_marginTop="10dp"
-                    android:textSize="16sp"
-                    app:layout_constraintEnd_toEndOf="@+id/textView"
-                    app:layout_constraintStart_toStartOf="@+id/textView"
-                    app:layout_constraintTop_toBottomOf="@+id/textView"/>
+            <!-- User Info Text Section -->
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="User"
+                android:textSize="22sp"
+                android:textStyle="bold"
+                android:layout_gravity="center"
+                android:layout_marginTop="10dp"/>
 
-                <LinearLayout
+            <TextView
+                android:id="@+id/textView2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Email"
+                android:textSize="16sp"
+                android:layout_gravity="center"
+                android:layout_marginTop="10dp"/>
+
+            <!-- Settings and Action Buttons -->
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_marginTop="20dp"
+                android:layout_gravity="center">
+
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/settingbutton"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="vertical"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/textView2">
+                    android:layout_height="55dp"
+                    android:text="Settings"
+                    android:textAlignment="viewStart"
+                    android:layout_marginStart="32dp"
+                    android:layout_marginEnd="32dp"
+                    android:layout_marginTop="10dp"
+                    android:background="@drawable/profile_btn"
+                    android:drawablePadding="20dp"
+                    android:paddingStart="20dp"
+                    android:drawableStart="@drawable/settings"/>
 
-                    <androidx.appcompat.widget.AppCompatButton
-                        android:id="@+id/settingbutton"
-                        android:layout_width="match_parent"
-                        android:layout_height="55dp"
-                        android:text="Settings"
-                        android:textAlignment="viewStart"
-                        android:layout_marginStart="32dp"
-                        android:layout_marginEnd="32dp"
-                        android:layout_marginTop="10dp"
-                        android:background="@drawable/profile_btn"
-                        android:layout_marginBottom="10dp"
-                        android:drawablePadding="20dp"
-                        android:paddingStart="20dp"
-                        android:drawableStart="@drawable/settings"/>
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/editbutton"
+                    android:layout_width="match_parent"
+                    android:layout_height="55dp"
+                    android:text="Edit Profile"
+                    android:textAlignment="viewStart"
+                    android:layout_marginStart="32dp"
+                    android:layout_marginEnd="32dp"
+                    android:layout_marginTop="10dp"
+                    android:background="@drawable/profile_btn"
+                    android:drawablePadding="20dp"
+                    android:paddingStart="20dp"
+                    android:drawableStart="@drawable/edit"/>
 
-                    <androidx.appcompat.widget.AppCompatButton
-                        android:id="@+id/editbutton"
-                        android:layout_width="match_parent"
-                        android:layout_height="55dp"
-                        android:text="Edit Profile"
-                        android:textAlignment="viewStart"
-                        android:layout_marginStart="32dp"
-                        android:layout_marginEnd="32dp"
-                        android:layout_marginTop="10dp"
-                        android:background="@drawable/profile_btn"
-                        android:layout_marginBottom="10dp"
-                        android:drawablePadding="20dp"
-                        android:paddingStart="20dp"
-                        android:drawableStart="@drawable/edit"/>
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/logoutbutton"
+                    android:layout_width="match_parent"
+                    android:layout_height="55dp"
+                    android:text="Logout"
+                    android:textAlignment="viewStart"
+                    android:layout_marginStart="32dp"
+                    android:layout_marginEnd="32dp"
+                    android:layout_marginTop="10dp"
+                    android:background="@drawable/profile_btn"
+                    android:drawablePadding="20dp"
+                    android:paddingStart="20dp"
+                    android:drawableStart="@drawable/logout"/>
+            </LinearLayout>
 
-                    <androidx.appcompat.widget.AppCompatButton
-                        android:id="@+id/logoutbutton"
-                        android:layout_width="match_parent"
-                        android:layout_height="55dp"
-                        android:text="Logout"
-                        android:textAlignment="viewStart"
-                        android:layout_marginStart="32dp"
-                        android:layout_marginEnd="32dp"
-                        android:layout_marginTop="10dp"
-                        android:background="@drawable/profile_btn"
-                        android:layout_marginBottom="10dp"
-                        android:drawablePadding="20dp"
-                        android:paddingStart="20dp"
-                        android:drawableStart="@drawable/logout"/>
-
-                </LinearLayout>
-            </androidx.constraintlayout.widget.ConstraintLayout>
         </LinearLayout>
     </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
