--- a/app/src/main/res/layout/item_sales_product.xml
+++ b/app/src/main/res/layout/item_sales_product.xml
@@ -4,6 +4,10 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="8dp"
+    android:layout_marginStart="5dp"
+    android:layout_marginEnd="5dp"
+    android:layout_marginTop="20dp"
+    android:background="@drawable/border"
     android:gravity="center_vertical">
 
     <!-- Product Image -->
